[gd_scene load_steps=14 format=3 uid="uid://t0cvaldpu21j"]

[ext_resource type="Script" path="res://player/spaceship.gd" id="1_i27ud"]
[ext_resource type="Texture2D" uid="uid://dg4c2p42hcsw6" path="res://resources/spaceships/bee-ship-black.png" id="2_b8kgy"]
[ext_resource type="PackedScene" uid="uid://dg78mgq3cekq5" path="res://weapons/weapon.tscn" id="4_u3qfp"]
[ext_resource type="PackedScene" uid="uid://djykmaj2oplxn" path="res://player/hurtbox.tscn" id="5_h6smq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gvfe7"]
atlas = ExtResource("2_b8kgy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmii1"]
atlas = ExtResource("2_b8kgy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t3wk"]
atlas = ExtResource("2_b8kgy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_krfcw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvfe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmii1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t3wk")
}],
"loop": true,
"name": &"move_forward",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ynemx"]
radius = 9.05539

[sub_resource type="CircleShape2D" id="CircleShape2D_a5jk7"]
radius = 11.0454

[sub_resource type="Animation" id="Animation_kauj0"]
resource_name = "invencible"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_sn3sk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(100, 100, 100, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2bjr1"]
_data = {
"RESET": SubResource("Animation_sn3sk"),
"invencible": SubResource("Animation_kauj0")
}

[node name="ship" type="CharacterBody2D"]
collision_mask = 4
script = ExtResource("1_i27ud")

[node name="sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(100, 100, 100, 1)
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_krfcw")
animation = &"move_forward"
autoplay = "move_forward"

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ynemx")

[node name="attack_speed_timer" type="Timer" parent="."]
one_shot = true

[node name="dash_cooldown_timer" type="Timer" parent="."]
one_shot = true

[node name="invencibility_timer" type="Timer" parent="."]
one_shot = true

[node name="weapon" parent="." instance=ExtResource("4_u3qfp")]

[node name="hurtbox" parent="." instance=ExtResource("5_h6smq")]

[node name="collider" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CircleShape2D_a5jk7")

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2bjr1")
}

[connection signal="timeout" from="dash_cooldown_timer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="invencibility_timer" to="." method="_on_invencibility_timer_timeout"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
